--- a/mushroom.html
+++ b/mushroom.html
@@ -1,3 +1,4 @@
+<html>
 <div>Mushroom classifier</div>
 <button type="button" onclick="init()">Identify</button>
 <div id="webcam-container"></div>
@@ -57,3 +58,4 @@
         }
     }
 </script>
+</html>
